--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,16 @@
 		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
 		    <version>2.1.4.RELEASE</version>
 		</dependency>
+		
+		<dependency>
+	        <groupId>nz.net.ultraq.thymeleaf</groupId>
+	        <artifactId>thymeleaf-layout-dialect</artifactId>
+    	</dependency>
+
+	    <dependency>
+	        <groupId>net.sourceforge.nekohtml</groupId>
+	        <artifactId>nekohtml</artifactId>
+	    </dependency>
 
 	</dependencies>
 
