--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 # Database Details
-spring.datasource.url=jdbc:mysql://localhost/Spring_auth
+spring.datasource.url=jdbc:mysql://localhost/Spring_auth?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.thymeleaf.cache=false
+error.message=First Name & Last Name is required!
 
 #Spring Security login queries
 security.basic.enabled=false
